correct loading of BranchPolicy objects when an XML schema is used
fix #51

--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,7 @@
                     <excludes>
                         <exclude>**/README</exclude>
                         <exclude>**/LICENSE</exclude>
+                        <exclude>.okhttpcache/**</exclude>
                         <exclude>.*</exclude>
                         <exclude>**/.keepgit</exclude>
                         <exclude>**/changelog.mustache</exclude>
