--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- dependencies versions as properties -->
-        <jgitver.version>0.3.0</jgitver.version>
+        <jgitver.version>0.4.0</jgitver.version>
         <maven-core.version>3.3.9</maven-core.version>
         <plexus-utils.version>3.0.8</plexus-utils.version>
         <maven-plugin-annotations.version>3.2</maven-plugin-annotations.version>
@@ -214,7 +214,7 @@
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         </manifest>
                         <manifestEntries>
-                            <X-Git-CommitId>${git.revision}</X-Git-CommitId>
+                            <X-Git-CommitId>${jgitver.git_sha1_full}</X-Git-CommitId>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -251,20 +251,6 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>ru.concerteza.buildnumber</groupId>
-                <artifactId>maven-jgit-buildnumber-plugin</artifactId>
-                <version>1.2.9</version>
-                <executions>
-                    <execution>
-                        <id>git-buildnumber</id>
-                        <goals>
-                            <goal>extract-buildnumber</goal>
-                        </goals>
-                        <phase>prepare-package</phase>
                     </execution>
                 </executions>
             </plugin>
@@ -411,7 +397,7 @@
                     <plugin>
                         <groupId>se.bjurr.gitchangelog</groupId>
                         <artifactId>git-changelog-maven-plugin</artifactId>
-                        <version>1.39</version>
+                        <version>1.49</version>
                         <executions>
                             <execution>
                                 <id>GenerateGitChangelog</id>
@@ -422,6 +408,7 @@
                                 <configuration>
                                     <!-- A file on filesystem //-->
                                     <filePath>CHANGELOG.md</filePath>
+                                    <templateFile>src/doc/changelog.mustache</templateFile>
                                     <gitHubApi>https://api.github.com/repos/jgitver/jgitver-maven-plugin</gitHubApi>
                                     <ignoreCommitsWithoutIssue>true</ignoreCommitsWithoutIssue>
 
@@ -454,6 +441,51 @@
                                         <requireReleaseVersion />
                                     </rules>
                                     <fail>true</fail>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>properties</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <echo>version calculated: ${jgitver.calculated_version}</echo>
+                                        <echo>dirty: ${jgitver.dirty}</echo>
+                                        <echo>head_committer_name: ${jgitver.head_committer_name}</echo>
+                                        <echo>head_commiter_email: ${jgitver.head_commiter_email}</echo>
+                                        <echo>head_commit_datetime: ${jgitver.head_commit_datetime}</echo>
+                                        <echo>git_sha1_full: ${jgitver.git_sha1_full}</echo>
+                                        <echo>git_sha1_8: ${jgitver.git_sha1_8}</echo>
+                                        <echo>branch_name: ${jgitver.branch_name}</echo>
+                                        <echo>head_tags: ${jgitver.head_tags}</echo>
+                                        <echo>head_annotated_tags: ${jgitver.head_annotated_tags}</echo>
+                                        <echo>head_lightweight_tags: ${jgitver.head_lightweight_tags}</echo>
+                                        <echo>base_tag: ${jgitver.base_tag}</echo>
+                                        <echo>base_tag_type: ${jgitver.base_tag_type}</echo>
+                                        <echo>all_tags: ${jgitver.all_tags}</echo>
+                                        <echo>all_annotated_tags: ${jgitver.all_annotated_tags}</echo>
+                                        <echo>all_lightweight_tags: ${jgitver.all_lightweight_tags}</echo>
+                                        <echo>all_version_tags: ${jgitver.all_version_tags}</echo>
+                                        <echo>all_version_annotated_tags: ${jgitver.all_version_annotated_tags}</echo>
+                                        <echo>all_version_lightweight_tags: ${jgitver.all_version_lightweight_tags}</echo>
+                                        <echo>base_version: ${jgitver.base_version}</echo>
+                                        <echo>next_major_version: ${jgitver.next_major_version}</echo>
+                                        <echo>next_minor_version: ${jgitver.next_minor_version}</echo>
+                                        <echo>next_patch_version: ${jgitver.next_patch_version}</echo>
+                                    </tasks>
                                 </configuration>
                             </execution>
                         </executions>
