--- a/src/it/java-plugin-extension-it/invoker.properties
+++ b/src/it/java-plugin-extension-it/invoker.properties
@@ -1,2 +1,2 @@
 # invoker.mavenOpts = -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000
-invoker.goals = -X install project-info-reports:dependencies
+# invoker.goals = -X install project-info-reports:dependencies
