--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,11 @@ sudo: required
 services:
   - docker
 
+before_script:
+  - chmod a+x src/ci/build-with-external-it-fallback.sh
+
 script:
-  - docker run --rm -v $(pwd):/root/sources -w /root/sources maven:3.3.9-jdk-8 mvn -Prun-its clean install
+  - docker run --rm -v $(pwd):/root/sources -w /root/sources maven:3.3.9-jdk-8 ./src/ci/build-with-external-it-fallback.sh
 
 after_failure:
   - find target/it -name *.log -exec echo {} \; -exec cat {} \;
