--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <commons-lang3.version>3.4</commons-lang3.version>
         <guava.version>19.0</guava.version>
         <junit.version>4.8.2</junit.version>
+        <simple-xml.version>2.7.1</simple-xml.version>
 
         <!-- plugins versions as properties -->
         <plexus-component-metadata.version>1.6</plexus-component-metadata.version>
@@ -152,6 +153,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.simpleframework</groupId>
+            <artifactId>simple-xml</artifactId>
+            <version>${simple-xml.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
