--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 
 jdk: oraclejdk8
 
-script: mvn -Prun-its clean install 
+script: ./mvnw -Prun-its clean install
 
 branches:
     except:
