add a dependency to jaxb-api to have the annotations in the classpath to be able to build to build on java11
fixes #106

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2.11</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>${maven-plugin-api.version}</version>
