--- a/pom.xml
+++ b/pom.xml
@@ -384,15 +384,43 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.sonatype.ossindex.maven</groupId>
-                    <artifactId>ossindex-maven-plugin</artifactId>
-                    <version>3.0.0</version>
-                </plugin>
             </plugins>
         </pluginManagement>
     </build>
     <profiles>
+        <profile>
+            <id>checks</id>
+            <activation>
+                <property>
+                    <name>env.SNYK_API_TOKEN</name>
+                </property>
+            </activation>
+            <properties>
+                <snyk-maven-plugin.version>1.1.1</snyk-maven-plugin.version>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>io.snyk</groupId>
+                        <artifactId>snyk-maven-plugin</artifactId>
+                        <version>${snyk-maven-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>snyk-test</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <apiToken>${env.SNYK_API_TOKEN}</apiToken>
+                            <failOnSeverity>none</failOnSeverity>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>run-its</id>
             <build>
