--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,26 @@
 language: java
 
+env:
+  - MAVEN_VERSION=3.3.9
+  - MAVEN_VERSION=3.5.4
+
 jdk: oraclejdk8
 
+install:
+  - "mvn -N io.takari:maven:wrapper -Dmaven=${MAVEN_VERSION}"
+  - "./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V"
 before_script:
     # reset correct branch information
-    - ./travis-set-branch.sh
+    - "./travis-set-branch.sh"
     # evaluate if we are building against a SNAPSHOT version of jgitver
     # in which case we need to also look into Sonatype OSS snapshot repository
-    - export MVN_SETTINGS= ;  cat pom.xml | grep /jgitver.version | grep -v SNAPSHOT || export MVN_SETTINGS="-s snapshot-settings.xml"
+    - "export MVN_SETTINGS= ;  cat pom.xml | grep /jgitver.version | grep -v SNAPSHOT || export MVN_SETTINGS=\"-s snapshot-settings.xml\""
 script:
-    - ./mvnw $MVN_SETTINGS -Prun-its clean install
+    - "./mvnw $MVN_SETTINGS -Prun-its clean install"
+
+cache:
+  directories:
+    - $HOME/.m2
 
 branches:
     except:
