--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <maven-plugin-api.version>2.0</maven-plugin-api.version>
         <plexus-component-annotations.version>1.5.5</plexus-component-annotations.version>
         <commons-lang3.version>3.4</commons-lang3.version>
-        <guava.version>19.0</guava.version>
+        <guava.version>27.0.1-jre</guava.version>
         <junit.version>4.8.2</junit.version>
         <simple-xml.version>2.7.1</simple-xml.version>
 
