use a pom profile to access sonatype repository instead of forcing user settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,17 @@ env:
 jdk: oraclejdk8
 
 install:
-  - "mvn --show-version -N io.takari:maven:0.6.1:wrapper -Dmaven=${MAVEN_VERSION}"
+  - "mvn --show-version -N -Psonatype io.takari:maven:0.6.1:wrapper -Dmaven=${MAVEN_VERSION}"
   - "echo ignore modifications done by maven wrapper"
   - "git update-index --assume-unchanged .mvn/wrapper/maven-wrapper.properties"
   - "git update-index --assume-unchanged .mvn/wrapper/maven-wrapper.jar"
   - "git update-index --assume-unchanged .mvn/wrapper/MavenWrapperDownloader.java"
-  - "./mvnw --show-version install -DskipTests=true -Dmaven.javadoc.skip=true -B -V"
+  - "./mvnw --show-version -Psonatype install -DskipTests=true -Dmaven.javadoc.skip=true -B -V"
 before_script:
     # reset correct branch information
     - "./travis-set-branch.sh"
 script:
-    - "./mvnw --show-version -Prun-its clean install"
+    - "./mvnw --show-version -Psonatype -Prun-its clean install"
 
 cache:
   directories:
