force LF line ending on mvnw script
when checkouting on windows and then running in docker this will avoid ^M (ie CRLF) issues

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 
 # Force the following filetypes to have unix eols, so Windows does not break them
 *.sh text eol=lf
+mvnw text eol=lf
 
 # Force images/fonts to be handled as binaries
 *.jpg binary
