--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,10 @@
         <junit.version>4.8.2</junit.version>
         <easymock.version>4.0.2</easymock.version>
         <simple-xml.version>2.7.1</simple-xml.version>
+        <checkstyle.version>8.21</checkstyle.version>
 
         <!-- plugins versions as properties -->
+        <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
         <plexus-component-metadata.version>1.7.1</plexus-component-metadata.version>
         <nexus-staging-maven-plugin.version>1.6.3</nexus-staging-maven-plugin.version>
         <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
@@ -302,12 +304,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.17</version>
+                <version>${maven-checkstyle-plugin.version}</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>6.17</version>
+                        <version>${checkstyle.version}</version>
                     </dependency>
                 </dependencies>
                 <executions>
