--- a/pom.xml
+++ b/pom.xml
@@ -503,6 +503,7 @@
                             <pomExcludes>   <!-- temporary for jgitver-maven-plugin#23 -->
                                 <pomExclude>pom-non-qualifier-branches-list-on-feature-it/pom.xml</pomExclude>
                                 <pomExclude>pom-non-qualifier-branches-single-on-feature-it/pom.xml</pomExclude>
+                                <pomExclude>issues/issue-36.1/pom.xml</pomExclude>
                             </pomExcludes>
                             <mavenOpts>-Dmaven.colors.skip=true</mavenOpts> <!-- avoid strange output in build.log by using https://github.com/rmannibucau/maven-color -->
                             <postBuildHookScript>verify</postBuildHookScript>
