--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
         <maven-invoker-plugin.version>1.10</maven-invoker-plugin.version>
+        <spotless.version>2.6.1</spotless.version>
     </properties>
 
     <developers>
@@ -425,6 +426,19 @@
                                 </pluginExecution>
                             </pluginExecutions>
                         </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.diffplug.spotless</groupId>
+                    <artifactId>spotless-maven-plugin</artifactId>
+                    <version>${spotless.version}</version>
+                    <configuration>
+                        <java>
+                            <googleJavaFormat>
+                                <version>1.9</version>
+                                <style>GOOGLE</style>
+                            </googleJavaFormat>
+                        </java>
                     </configuration>
                 </plugin>
             </plugins>
