adapt end of lines for github actions

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,8 @@
 * text=auto
 
 # Force the following filetypes to have unix eols, so Windows does not break them
+*.bat text eol=crlf
+*.cmd text eol=crlf
 *.sh text eol=lf
 mvnw text eol=lf
 
